--- a/Week-06/.vscode/settings.json
+++ b/Week-06/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "liveServer.settings.multiRootWorkspaceName": "Week-06"
+  "liveServer.settings.multiRootWorkspaceName": "Week-06",
+  "liveServer.settings.port": 5501
 }
